services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-iot
spec:
  rules:
    # Règles pour app1
    - host: authentification.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentification
                port:
                  number: 80

    # Règles pour app2
    - host: friends.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: friends
                port:
                  number: 80

    # Règles pour app3
    - host: messages.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: messages
                port:
                  number: 80
